k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress

spec:
  ingressClassName: nginx
  rules:
    - host: p2f.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 9999
    - host: p2f.local.reviews
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviews-api-service
                port:
                  number: 3000
